Updated all documentation